# Kumiko-Site

./: README.md
.github/: dependabot.yml
.github/workflows/: codeql-ts.yml
.husky/: pre-commit
Kumiko-API/: .gitignore  Makefile  db-init.py  pyproject.toml
Kumiko-API/API/: kumiko-api.py
Kumiko-API/api_sql/: db.py  models.py  schemas.py
Kumiko-API/api_utils/: __init__.py  crud.py
kumiko-next/: .gitignore  .prettierignore  package.json  playwright.config.ts  pnpm-lock.yaml
kumiko-next/pages/: _app.tsx  _document.tsx  index.tsx
kumiko-next/pages/login/: index.tsx
kumiko-next/pages/privacy-policy/: index.tsx
kumiko-next/pages/terms-of-service/: index.tsx
kumiko-next/shared/index-components/: body.tsx  bottom.tsx  the-rest-of-the-body.tsx
kumiko-next/shared/login-components/: body.tsx
kumiko-next/shared/privacy-policy-components/: body.tsx
kumiko-next/shared/shared-components/: footer.tsx  navbar.tsx
kumiko-next/shared/shared-themes/: theme.tsx
kumiko-next/shared/tos-components/: body.tsx
kumiko-next/styles/: globals.css
kumiko-next/tests/: test-interactive.spec.ts
